[gd_scene load_steps=9 format=3 uid="uid://64d8byno8hck"]

[ext_resource type="Texture2D" uid="uid://dt2rancvjeq3y" path="res://LevelSelect/Island1.png" id="1_uah6k"]
[ext_resource type="Texture2D" uid="uid://dekjib5l3hkip" path="res://LevelSelect/LevelSelectStar.png" id="2_ncien"]
[ext_resource type="Script" path="res://LevelSelect/LevelSelectIsland.gd" id="2_udmdw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjm0f"]
size = Vector2(96, 80)

[sub_resource type="Animation" id="Animation_6wue8"]
resource_name = "float"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, -2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Star1:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, -2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Star2:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, -2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Star3:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, -2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bf4fg"]
_data = {
"float": SubResource("Animation_6wue8")
}

[sub_resource type="Animation" id="Animation_dmqyp"]
resource_name = "reveal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(0.109804, 0.109804, 0.109804, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7t0pk"]
_data = {
"reveal": SubResource("Animation_dmqyp")
}

[node name="Island" type="Sprite2D"]
z_index = 2
texture_filter = 1
texture = ExtResource("1_uah6k")
script = ExtResource("2_udmdw")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_tjm0f")

[node name="Star1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-20, 22)
texture = ExtResource("2_ncien")

[node name="Star2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 29)
texture = ExtResource("2_ncien")

[node name="Star3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(20, 22)
texture = ExtResource("2_ncien")

[node name="FloatAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bf4fg")
}

[node name="StartAnimationTimer" type="Timer" parent="FloatAnimation"]
one_shot = true

[node name="ModulateAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7t0pk")
}

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="FloatAnimation/StartAnimationTimer" to="." method="_on_start_animation_timer_timeout"]
